# curl-impersonate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: android-browser-probe.yml  android-fingerprint-harvest.yml  build-docker.yml  fingerprint-harvest.yml  fingerprint-harvester-check.yml  profile-release.yml  release.yml  safari-fingerprint-harvest.yml
cmake/: InjectImpersonationProfiles.cmake
docs/: fingerprints.rst
patches/: curl.patch
profiles/: README.md
profiles/chrome/: chrome146.json  chrome150.json  chrome150_linux.json  chrome150_macos.json  chrome150_windows.json  chrome151_android.json
profiles/evidence/chrome150/linux/: manifest.json  profile.json
profiles/evidence/chrome150/mac/: manifest.json  profile.json  readiness.json
profiles/evidence/chrome150/mac_arm64/: manifest.json  profile.json
profiles/evidence/chrome150/win64/: manifest.json  (+3 more)
profiles/evidence/safari265_ios/: capabilities.json  manifest.json  profile.json
profiles/safari/: safari2652.json  safari265_ios.json
tools/fingerprint-harvester/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
tools/fingerprint-harvester/scripts/: authenticate_android_play.py  download_android_chrome.py
tools/fingerprint-harvester/src/fingerprint_harvester/: __init__.py  android_apkmirror.py  android_play.py  android_runner.py  bundle.py  capabilities.py  chrome_runner.py  cli.py  compiler.py  diffing.py  ios_safari_capture.mjs  models.py  normalize.py  readiness.py  releases.py  replay.py  safari_runner.py
tools/fingerprint-harvester/tests/: test_harvester.py
(+66 files in other folders)
